Added questions into js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 </head>
 <body>
+
+     var directionsText = document.getElementById('directions-text');
     
 </body>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
