Added functions to JS to make the content appear in the HTML

--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
-    <link rel="stylesheet" type="text/css"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
 
-        <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                  <h1 class="display-4">Disney Lyrics Trivia!</h1>
-                  <p class="lead"><span id="directions-text">Press the START button to begin the trivia game!</span></p>
-                  <button type="button" class="btn btn-primary" id="start-btn">Start</button>
-                </div>
-              </div>
+    <!-- <div class="jumbotron jumbotron-fluid"> -->
+        <div class="container">
+            <h1 class="display-4">Disney Lyrics Trivia!</h1>
+            <p class="lead"><span id="directions-text">Press the START button to begin the trivia game!</span></p>
+            <button type="button" class="btn btn-primary" id="start-btn">Start</button>
+        </div>
+    <!-- </div> -->
+
+<div id="time"></div>
+
+    <div class="questions"></div>
+        <!-- <p id=question1>"What is the next lyric in the Mulan song, Reflection: Look at me/ I will never pass for a perfect bride/ Or a perfect daughter"</p>
+        <button id="a">"Can it be I'm not meant to play this role"</button>
+        <button id="b">"Can it be I'm not meant to play this part"</button>
+        <button id="c">"Can it be I'm not meant to be a bride"</button> -->
+    <div class= "answers"></div>
+        <!-- <p> correct: "B"</p> -->
 
     <!-- <div>
     <h1>Disney Lyrics Trivia Game</h1>
@@ -32,7 +43,8 @@
 
     <button type="button" class="btn btn-primary">Start</button>
     </div> -->
-    
+
 </body>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
+
 </html>
