Cleaned up html and js by removing unnecessary comments

--- a/index.html
+++ b/index.html
@@ -18,31 +18,18 @@
 
 <body>
 
-    <!-- <div class="jumbotron jumbotron-fluid"> -->
-        <div class="container">
-            <h1 class="display-4">Disney Lyrics Trivia!</h1>
-            <p class="lead"><span id="directions-text">Press the START button to begin the trivia game!</span></p>
-            <button type="button" class="btn btn-primary" id="start-btn">Start</button>
-        </div>
-    <!-- </div> -->
+    <div class="container">
+        <h1>Disney Lyrics Trivia!</h1>
+        <p></p><span id="directions-text"></span></p>
+        <button type="button" id="start-btn">Start</button>
+    </div>
 
-<div id="time"></div>
+    <div id="time"></div>
 
     <div class="questions"></div>
-        <!-- <p id=question1>"What is the next lyric in the Mulan song, Reflection: Look at me/ I will never pass for a perfect bride/ Or a perfect daughter"</p>
-        <button id="a">"Can it be I'm not meant to play this role"</button>
-        <button id="b">"Can it be I'm not meant to play this part"</button>
-        <button id="c">"Can it be I'm not meant to be a bride"</button> -->
-    <div class= "answers"></div>
-        <!-- <p> correct: "B"</p> -->
 
-    <!-- <div>
-    <h1>Disney Lyrics Trivia Game</h1>
+    <div class="answers"></div>
 
-    <p><span id="directions-text">Press the START button to begin the trivia game!</span></p>
-
-    <button type="button" class="btn btn-primary">Start</button>
-    </div> -->
 
 </body>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
