Attempted to add timer for each question

--- a/index.html
+++ b/index.html
@@ -18,17 +18,29 @@
 
 <body>
 
-    <div class="container">
+    <div>
         <h1>Disney Lyrics Trivia!</h1>
         <p></p><span id="directions-text"></span></p>
-        <button type="button" id="start-btn">Start</button>
+        <div id="start"><button type="button" id="start-btn"></button></div>
     </div>
 
-    <div id="time"></div>
+    <!-- <div class="triviaGame" style="display: none;"> -->
+        <div id="timer"></div>
+        <div class="questions"></div>
+        <div class="answers"></div>
 
-    <div class="questions"></div>
+    </div>
 
-    <div class="answers"></div>
+
+    <div id="playAgain">
+
+        <div id="correct-text"></div>
+        <div id="wrong-text"></div>
+        <div id="unanswered-text"></div>
+
+    </div>
+
+
 
 
 </body>
