Added setTimeout after question is answered

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- <div class="triviaGame" style="display: none;"> -->
         <div id="timer"></div>
         <div class="questions"></div>
+        <br>
         <div class="answers"></div>
 
     </div>
@@ -37,6 +38,7 @@
         <div id="correct-text"></div>
         <div id="wrong-text"></div>
         <div id="unanswered-text"></div>
+        <!-- <div class="playAgain1" style="display:none;"><button type="button" id="playAgain-btn"></button></div> -->
 
     </div>
 
