Fixed timer with clearTimeout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
     <!-- <div class="triviaGame" style="display: none;"> -->
         <div id="timer"></div>
-        <div class="questions"></div>
+        <div class="questions">
+        </div>
+        <div id="buttons-id">
+                
+        </div>
         <br>
         <div class="answers"></div>
 
@@ -38,7 +42,7 @@
         <div id="correct-text"></div>
         <div id="wrong-text"></div>
         <div id="unanswered-text"></div>
-        <!-- <div class="playAgain1" style="display:none;"><button type="button" id="playAgain-btn"></button></div> -->
+        <!-- <div class="playAgain?" style="display:none;"><button type="button" id="playAgain-btn"></button></div> -->
 
     </div>
 
