--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 
     <!-- <div class="triviaGame" style="display: none;"> -->
         <div id="timer"></div>
-        <div class="questions">
-        </div>
-        <div id="buttons-id">
-                
-        </div>
+        <div class="questions"></div>
         <br>
         <div class="answers"></div>
 
@@ -42,7 +38,6 @@
         <div id="correct-text"></div>
         <div id="wrong-text"></div>
         <div id="unanswered-text"></div>
-        <!-- <div class="playAgain?" style="display:none;"><button type="button" id="playAgain-btn"></button></div> -->
 
     </div>
 
