Added timer of 10 seconds to setQuestion and PlayAgain button to replay game

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
 
     <!-- <div class="triviaGame" style="display: none;"> -->
-        <div id="timer"></div>
-        <div class="questions"></div>
-        <br>
-        <div class="answers"></div>
+    <div id="timer"></div>
+    <div class="questions"></div>
+    <br>
+    <div class="answers"></div>
 
     </div>
 
@@ -40,6 +40,9 @@
         <div id="unanswered-text"></div>
 
     </div>
+
+    <div id="reset"><button type="button" id="reset-btn">Play Again? </button></div>
+
 
 
 
