--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
-    <!-- <link rel="stylesheet" type="text/css"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
@@ -21,25 +21,28 @@
     <div>
         <h1>Disney Lyrics Trivia!</h1>
         <p></p><span id="directions-text"></span></p>
-        <div id="start"><button type="button" id="start-btn"></button></div>
+        <div id="start">
+            <button type="button" id="start-btn">Start</button>
+        </div>
     </div>
 
     <!-- <div class="triviaGame" style="display: none;"> -->
-    <div id="timer"></div>
+    <div id="time"></div>
     <div class="questions"></div>
     <br>
     <div class="answers"></div>
 
+    <div id="start">
+            <button type="button" id="finished-btn">Submit</button>
+        </div>
     </div>
 
 
-    <div id="playAgain">
+    <div id="playAgain"></div>
 
         <div id="correct-text"></div>
         <div id="wrong-text"></div>
         <div id="unanswered-text"></div>
-
-    </div>
 
     <div id="reset"><button type="button" id="reset-btn">Play Again? </button></div>
 
