TriviaGame is working!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="answers"></div>
 
     <div id="start">
-            <button type="button" id="finished-btn">Submit</button>
+            <button type="button" id="submit-btn">Submit</button>
         </div>
     </div>
 
