--- a/index.html
+++ b/index.html
@@ -18,33 +18,42 @@
 
 <body>
 
-    <div>
-        <h1>Disney Lyrics Trivia!</h1>
-        <p></p><span id="directions-text"></span></p>
-        <div id="start">
-            <button type="button" id="start-btn">Start</button>
+        <div class="jumbotron jumbotron-fluid" id="background">
+            <div class="container">
+                <h1 class="display-4"><img src="assets/images/Disney.PNG"> Lyrics Trivia!</h1>
+                  <p class="lead">
+                      <span id="directions-text"></span>
+                    </p>
+                    <div id="start">
+                            <button type="button" class="btn btn-secondary" id="start-btn">Start Game</button>
+                    </div>
+            </div>
         </div>
-    </div>
 
-    <!-- <div class="triviaGame" style="display: none;"> -->
+    <img src="assets/images/Disney-1.PNG" id="disneyPic1">
+
     <div id="time"></div>
     <div class="questions"></div>
     <br>
     <div class="answers"></div>
 
     <div id="start">
-            <button type="button" id="submit-btn">Submit</button>
-        </div>
+            <button type="button" class="btn btn-secondary" id="submit-btn">Submit</button>
     </div>
 
 
     <div id="playAgain"></div>
+    <br>
+    <div id="reset">
+            <button type="button" class="btn btn-secondary" id="reset-btn">Play Again? </button>
+    </div>
+    <br>
+    <div id="correct-text"></div>
+    <br>
+    <div id="wrong-text"></div>
+    
 
-        <div id="correct-text"></div>
-        <div id="wrong-text"></div>
-        <div id="unanswered-text"></div>
 
-    <div id="reset"><button type="button" id="reset-btn">Play Again? </button></div>
 
 
 
